hcloud-csi/templates/network_policy.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")

#@ if data.values.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hcloud-csi
  namespace: kube-system
  labels: #@ labels("netpol")
spec:
  podSelector:
    matchLabels:
      app: hcloud-csi
  ingress:
  - from: #! allow access from itself
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: kube-system
      podSelector: {}
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 9189

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hcloud-csi-controller
  namespace: kube-system
  labels: #@ labels("netpol")
spec:
  podSelector:
    matchLabels:
      app: hcloud-csi-controller
  ingress:
  - from: #! allow access from itself
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: kube-system
      podSelector: {}
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 9189
#@ end
